tests/paczka1/fuzzy1/33803306.err
Error in line 13: HjjJWX S698 40,5
Error in line 23: ViOd A211 0,2
Error in line 25: Q4jQyH S180 8,4
